many many updates

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -3,5 +3,6 @@
         <li><a href="/home">Home</a></li>
         <li><a href="/profile">Profile</a></li>
         <li><a href="/logout">Logout</a></li>
+        <li><a href="/upload">➕</a></li>
     </ul>
 </nav>
